--- a/src/app/page/driverdashboard/driverdashboard.component.html
+++ b/src/app/page/driverdashboard/driverdashboard.component.html
@@ -143,22 +143,22 @@
              <div class="row px-1 d-flex flex-wrap align-items-center" style="margin: 0;">
               <div class="col-3 d-flex flex-wrap align-items-center justify-content-center">
                 <div class="icon-container" style="background-color: #d9d9d9;">
-                  <mat-icon class="icon-standard" [ngClass]="driver.wakeupicon" >watch_later</mat-icon>
+                  <mat-icon class="icon-standard" [ngClass]="driver.wakeupicon" style="height: 30px;width: 30px;">watch_later</mat-icon>
                 </div>
               </div>
               <div class="col-3 d-flex flex-wrap align-items-center justify-content-center">
                 <div class="icon-container" style="background-color: #d9d9d9;">
-                  <mat-icon class="icon-standard" [ngClass]="driver.algohalicon">record_voice_over</mat-icon>
+                  <mat-icon class="icon-standard" [ngClass]="driver.algohalicon" style="height: 30px;width: 30px;">record_voice_over</mat-icon>
                 </div>
               </div>
               <div class="col-3 d-flex flex-wrap align-items-center justify-content-center">
                 <div class="icon-container" style="background-color: #d9d9d9;">
-                  <mat-icon class="icon-standard" [ngClass]="driver.tempicon" >hot_tub</mat-icon>
+                  <mat-icon class="icon-standard" [ngClass]="driver.tempicon" style="height: 30px;width: 30px;" >hot_tub</mat-icon>
                 </div>
               </div>
               <div class="col-3 d-flex flex-wrap align-items-center justify-content-center">
                 <div class="icon-container" style="background-color: #d9d9d9;">
-                  <mat-icon class="icon-standard" [ngClass]="driver.starticon">power_settings_new</mat-icon>
+                  <mat-icon class="icon-standard" [ngClass]="driver.starticon" style="height: 30px;width: 30px;">power_settings_new</mat-icon>
                 </div>
               </div>
             </div>
@@ -227,23 +227,52 @@
  <div class="row no-gutters zeroxy d-flex justify-content-center"  *ngFor="let comp of dashboardData">
 
     <div class="col-12 row no-gutters d-flex justify-content-center" style="border: none; border-bottom: 1px dashed #becdeb;">
-      <div class="col-lg-2 col-sm-12 justify-content-start">{{comp.companyname}}</div>
-      <div class="col-lg-10 col-sm-12 justify-content-start align-content-center">
-        {{comp.listdriver.length}}
-        {{ comp.totalwakeup }}
-        {{ comp.totalalgohol }}
-        {{ comp.totaltemp }}
-        {{ comp.totalstart }}
+      <div class="col-lg-10 col-sm-12 d-flex justify-content-start align-items-center">{{comp.companyname}}</div>
+      <div class="col-lg-2 col-sm-12">
+        <div class="d-flex no-gutters zeroxy justify-content-end mx-4">
+          <div class="row no-gutters zeroxy">
+            <div class="col-12 no-gutters zeroxy icircle d-flex justify-content-center" style="background-color: darkgreen;color:white;">{{comp.listdriver.length}}</div>
+            <div class="col-12 no-gutters zeroxy d-flex justify-content-center"><mat-icon style="font-size:medium;">group</mat-icon></div>
+          </div>
+          <div class="row no-gutters zeroxy">
+            <div class="col-12 no-gutters zeroxy icircle d-flex justify-content-center" style="background-color: #116bd2;color:white;">{{comp.totalwakeup}}</div>
+            <div class="col-12 no-gutters zeroxy d-flex justify-content-center"><mat-icon style="font-size:medium;">access_time</mat-icon></div>
+          </div>
+          <div class="row no-gutters zeroxy">
+            <div class="col-12 no-gutters zeroxy icircle d-flex justify-content-center" style="background-color: #fb0000;color:white;">{{comp.totalalgohol}}</div>
+            <div class="col-12 no-gutters zeroxy d-flex justify-content-center"><mat-icon style="font-size:medium;">local_bar</mat-icon></div>
+          </div>
+          <div class="row no-gutters zeroxy">
+            <div class="col-12 no-gutters zeroxy icircle d-flex justify-content-center" style="background-color: orange;color:white;">{{comp.totaltemp}}</div>
+            <div class="col-12 no-gutters zeroxy d-flex justify-content-center"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:10px;;"><span style="font-size:7px; font-family:Verdana; font-weight:bold;">TEMP</span></mat-icon></div>
+          </div>
+          <div class="row no-gutters zeroxy">
+            <div class="col-12 no-gutters zeroxy icircle d-flex justify-content-center" style="background-color: #5c8f4e;color:white;">{{comp.totalstart}}</div>
+            <div class="col-12 no-gutters zeroxy d-flex justify-content-center"><mat-icon style="font-size:medium;">directions_car</mat-icon></div>
+          </div>
+        </div>
       </div>
     </div>
   
-    <div class="col-12 my-2 row no-gutters d-flex justify-content-center" style="background-color: greenyellow;">
-      <div class="row zeroxy" *ngFor="let driver of comp.listdriver" style="background-color: navajowhite;">
-
-        <div class="col-1">x</div>
-        <!-- <div class="col-lg-2 col-sm-2" style="font-size:x-small;">{{driver.drivername}}</div> -->
-
-       </div>
+    <div class="col-12 my-2 row no-gutters d-flex justify-content-start zeroxy">
+      <div class="col-lg-1 zeroxy m-1" *ngFor="let driver of comp.listdriver">
+        <div class="col-12 d-flex flex-wrap align-items-center justify-content-center zeroxy">
+            <div class="col-6 zeroxy" [ngClass]="driver.wakeupicon" style="border-radius: 5px 0 0 0;box-shadow:none;">
+              <mat-icon>watch_later</mat-icon>
+            </div>
+        <div class="col-6 zeroxy"[ngClass]="driver.algohalicon" style="border-radius: 0 5px 0 0;box-shadow:none;">
+              <mat-icon>record_voice_over</mat-icon>
+            </div>
+        </div>
+        <div class="col-12 d-flex flex-wrap align-items-center justify-content-center zeroxy">
+          <div class="col-6 zeroxy"[ngClass]="driver.tempicon" style="border-radius: 0 0 0 5px;box-shadow:none;">
+            <mat-icon>hot_tub</mat-icon>
+          </div>
+          <div class="col-6 zeroxy"[ngClass]="driver.starticon" style="border-radius: 0 0 5px 0;box-shadow:none;">
+            <mat-icon>power_settings_new</mat-icon>
+          </div>
+        </div>
+      </div>
     </div>
 
  </div>
