update comp picture

--- a/src/app/page/driverdashboard/driverdashboard.component.scss
+++ b/src/app/page/driverdashboard/driverdashboard.component.scss
@@ -133,8 +133,7 @@
 }
 
 .icircle {
-    width: 26px; 
-    height: 26px;
+    width: 26px; height: 26px;
     line-height: 26px; 
     border-radius: 50%; 
     font-size: small;
