--- a/src/app/page/driverdashboard/driverdashboard.component.html
+++ b/src/app/page/driverdashboard/driverdashboard.component.html
@@ -222,14 +222,56 @@
 
 <!-- Driver Dashboard All-->
 <div *ngIf="!show" class="mx-2 mt-4 row no-gutters d-flex justify-content-center zeroxy" >
-  <!-- <div *ngFor="let comp of dashboardData" class="col-1" style="background-color: #5c8f4e;">a</div> -->
-  <!-- <div class="{{isDesktop>5 ? 'col-1':'col-4'}}" style="background-color: #5c8f4e;">a</div> -->
- <div class="row no-gutters zeroxy d-flex justify-content-center"  *ngFor="let comp of dashboardData">
+ <div class="row no-gutters d-flex justify-content-center" >
+      
+      <!-- <div *ngFor="let comp of dashboardData" class="mx-2 zeroxy icircle d-flex justify-content-center align-items-center ishadow" style="width: 40px; height:40px; background-color: #e1e7f5; border:1px;z-index: 3;">
+        <div class="zeroxy icircle d-flex justify-content-center align-items-center" style="background-color:white ;width: 37px; height: 37px;z-index:9;">
+          <img [src]="'../../../assets/images/logocomp/' + comp.companyname + '.jpg'" style="width:80%;">
+        </div>
+      </div> -->
+<!-- 
+      <div class="zeroxy no-gutters col-lg-1 row">
+        <div class="zeroxy no-gutters col-lg-12 row">
+          <div class="zeroxy row no-gutters">
+            <div class="zeroxy no-gutters col-lg-6 row H1031">a</div>
+            <div class="zeroxy no-gutters col-lg-6 row H1041">b</div>
+          </div>
+        </div>
+        <div class="zeroxy no-gutters col-lg-12 row">
+          <div class="zeroxy row no-gutters">
+            <div class="zeroxy no-gutters col-lg-6 row H1033">c</div>
+            <div class="zeroxy no-gutters col-lg-6 row H1080">d</div>
+          </div>
+        </div>
+      </div> -->
+      <div *ngFor="let comp of dashboardData" class="mx-2 zeroxy no-gutters col-lg-1 row">
+        <div class="mx-2 col-lg-auto zeroxy icircle d-flex justify-content-center align-items-center ishadow" style="width: 40px; height:40px; background-color: #e1e7f5; border:1px;z-index: 3;">
+          <div class="zeroxy icircle d-flex justify-content-center align-items-center" style="background-color:white ;width: 37px; height: 37px;z-index:9;">
+            <img [src]="'../../../assets/images/logocomp/' + comp.companyname + '.jpg'" style="width:80%;">
+          </div>
+        </div>
+        <div class="zeroxy no-gutters col-lg-7 row ishadow" style="margin-left:0px;">
+          
+          <div class="col-lg-6 d-flex align-items-center justify-content-center" style="z-index:999;margin:0px 0px 0px 0px;">
+            <div class="col-12 no-gutters zeroxy icircle d-flex justify-content-center" style="background-color: darkgreen;color:white;">{{comp.listdriver.length}}</div>
+          </div>
 
-    <div class="col-12 row no-gutters d-flex justify-content-center" style="border: none; border-bottom: 1px dashed #becdeb;">
+          <div class="col-lg-6 d-flex align-items-center justify-content-center" style="z-index:999;margin:0px 0px 0px 0px;">
+           {{comp.totalwakeup}},
+           {{comp.totalalgohol}},
+           {{comp.totaltemp}},
+           {{comp.totalstart}}
+          </div>
+
+        </div>
+      </div>
+
+
+    <!-- <div class="col-12 row no-gutters d-flex justify-content-center" style="border: none; border-bottom: 1px dashed #becdeb;">
       <div class="col-lg-10 col-sm-12 d-flex justify-content-start align-items-center">{{comp.companyname}}</div>
       <div class="col-lg-2 col-sm-12">
         <div class="d-flex no-gutters zeroxy justify-content-end mx-4">
+
           <div class="row no-gutters zeroxy">
             <div class="col-12 no-gutters zeroxy icircle d-flex justify-content-center" style="background-color: darkgreen;color:white;">{{comp.listdriver.length}}</div>
             <div class="col-12 no-gutters zeroxy d-flex justify-content-center"><mat-icon style="font-size:medium;">group</mat-icon></div>
@@ -250,6 +292,7 @@
             <div class="col-12 no-gutters zeroxy icircle d-flex justify-content-center" style="background-color: #5c8f4e;color:white;">{{comp.totalstart}}</div>
             <div class="col-12 no-gutters zeroxy d-flex justify-content-center"><mat-icon style="font-size:medium;">directions_car</mat-icon></div>
           </div>
+
         </div>
       </div>
     </div>
@@ -273,7 +316,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
  </div>
 
