เพิ่ม View_Module หน้าเพจ Search Driver

--- a/src/app/page/Driver/searchdriver-page/searchdriver-page.component.scss
+++ b/src/app/page/Driver/searchdriver-page/searchdriver-page.component.scss
@@ -12,3 +12,15 @@
     justify-content: space-between;
     flex-wrap: wrap;
   }
+.centered-button {
+    display: flex;
+    justify-content: center; /* จัดไอคอนให้อยู่กึ่งกลางแนวนอน */
+    align-items: center; /* จัดไอคอนให้อยู่กึ่งกลางแนวตั้ง */
+}
+
+.card-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
