--- a/src/app/page/loginpage/loginpage.component.html
+++ b/src/app/page/loginpage/loginpage.component.html
@@ -8,13 +8,29 @@
 </head>
 
 
-<body>
-  <span style="color: #cbccbb; font-size: xx-large;">Gbus Driver</span>
+<body style=" z-index: 0; position:static;">
+  <!-- <span style="color: #cbccbb; font-size: xx-large;">Gbus Driver</span>
   <input required="required" type="text" name="text" placeholder="Username">
   <input *ngIf="!user.showpwd" required="required" type="password" name="pwd" placeholder="Password">
   <input *ngIf="user.showpwd" required="required" type="text" name="pwd" placeholder="Password">
   <input type="checkbox" value="remember-me"><small>&nbsp;Show Password</small>
-  <button type="button" class="btn btn-lg btn-success" (click)="onSubmit()">Login</button>
+  <button type="button" class="btn btn-lg btn-success" (click)="onSubmit()">Login</button> -->
+
+<!-- 
+<div class="row d-flex align-content-center justify-content-center" style="z-index: 1; background-color: greenyellow; position:absolute;">
+  <div class="col-12" style="background-color: orange;">
+    <Span class="row d-flex align-content-center justify-content-center">HELLO</Span>
+  </div>
+</div> -->
+
+<div class="row row d-flex align-content-center justify-content-center" style="height: 100vh;position:static;">
+
+  <div class="col-1 H1031">
+    <Span class="row d-flex align-content-center justify-content-center">Please Wait ............ </Span>
+  </div>
+  
+</div>
+
 
 </body>
 
