--- a/src/app/page/Mobile/drivercheckinpage/drivercheckinpage.component.html
+++ b/src/app/page/Mobile/drivercheckinpage/drivercheckinpage.component.html
@@ -1,4 +1,24 @@
-<div class="container" style="margin: 10px;">
+<!-- background -->
+<div class="col-lg-12 col-12" style = "background-color: #324aa1; color:#324aa1; height:15vh; position:absolute;z-index:0;">------a</div>
+
+<!-- forground -->
+<div class="col-lg-12" style="position:absolute; z-index:1;">
+
+    <div class="row m-3 " style="color:white; background-color: green;">
+        <div class="col-lg-auto col-auto">
+            <mat-icon class="icon-normal align-items-center" style="color:white;font-size:large;">chrome_reader_mode</mat-icon>
+        </div>
+        <div class="col-lg-auto col-auto">06:00</div>
+        <div class="col-lg-10 col-auto" style="background-color: red;">รอเช็คอิน</div>
+    </div>
+
+    <div class="ishadow">
+        a
+    </div>
+
+
+
+
     <div class="row no-gutter d-flex justify-content-center">
         <div class="col-10">
             <!-- Status -->
@@ -116,6 +136,7 @@
 
 
 
+<!-- popup -->
 <ng-template #modalcancelwork let-modal>
     <div class="modal-header">
         <b>ไม่สามารถปฎิบัติงานได้</b>
@@ -152,4 +173,4 @@
             </div>
         </div>        
     </div>
-    </ng-template>
+</ng-template>
