--- a/src/app/page/Mobile/drivercheckinpage/drivercheckinpage.component.scss
+++ b/src/app/page/Mobile/drivercheckinpage/drivercheckinpage.component.scss
@@ -44,3 +44,10 @@
 .full-width {
     width: 100%;
  }
+
+
+.ishadow{ 
+    box-shadow: 0px 2px 5px -1px #00000066;
+    background-color:white;
+    border-radius:10px;
+  }
