--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,10 +52,12 @@
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> routedata </span>
         </div>
-        <div *ngIf="true" (click)="openPage('driverregister')"  class="clickable-div">
+        <!-- <div *ngIf="true" (click)="openPage('driverregister')"  class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> driverregister </span>
-       </div>
+       </div> -->
+
+       <!-- LINE OA / drivergbus.gpsasiagps.com -->
         <div *ngIf="true" (click)="openPage('drivercheckin')"  class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> drivercheckin </span>
@@ -68,6 +70,8 @@
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> driverworkreport </span>
         </div>
+
+
         <div *ngIf="true" (click)="openPage('confirmjob')"  class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> confirmjob </span>
