--- a/src/app/page/driverdashboard/driverdashboard.component.html
+++ b/src/app/page/driverdashboard/driverdashboard.component.html
@@ -38,166 +38,133 @@
 <!-- Driver Detail -->
 <div *ngIf="show" class="row d-flex flex-row justify-content-start align-items-center no-gutters mx-2 mt-5 mb-1">
     <div class="row d-flex justify-content-center align-items-center  no-gutters">
-      <!-- Back Button Container -->
-      <!-- <div class="col-1 d-flex justify-content-start align-items-center no-gutters">
-        <button mat-icon-button class="no-gutters">
-          <mat-icon>keyboard_arrow_left</mat-icon>
-        </button>
-      </div> -->
 
-      <!-- Company Names Container (Scrollable) -->
-
-
-      <div class="col-12 d-flex flex-wrap align-items-center justify-content-center no-gutters" style="overflow-x: auto;">
-        <!-- <div class="{{isDesktop == 6 ? 'col-1':'col-11'}} ishadow no-gutters" *ngFor="let comp of dashboardData.slice(0,isDesktop)"> -->
-        <div class="col-12 row" *ngFor="let comp of dashboardData.slice(0,isDesktop)" [matMenuTriggerFor]="menu">
+      <div class="col-11 d-flex flex-wrap align-items-center justify-content-center no-gutters" style="overflow-x: auto;">
+        <div class="col-12 row d-flex justify-content-center align-items-center no-gutters" *ngFor="let comp of dashboardData.slice(0,isDesktop)" >
         
           <!-- company data -->
-          <div class="col-12">
+          <div class="col-11 my-1  justify-content-center ">
+            <div class="row" (click) = "comp.showDetails=!comp.showDetails">
 
-          <div class="row mx-1 no-gutters" (click) = "comp.showDetails=!comp.showDetails">
-            <div class="col-5 d-flex justify-content-center align-items-center no-gutters">
-              <span style="font-weight:500; font-size:smaller; text-transform:uppercase;">{{ comp.companyname }}</span>
-            </div>
-            <div class="col-5 no-gutters">
-              <div class="row justify-content-end no-gutters">                
-                <div class="col-10 d-flex justify-content-center rounded-circle text-white text-center icircle mt-2 no-gutters" style="background-color:darkgreen;">
-                  {{comp.listdriver.length}}
+          
+              <div class="col-2">
+                <span  matBadge=" {{comp.listdriver.length}}">{{ comp.companyname }}</span>
+              </div>
+
+              <div class="col-10 ishadow row">
+                <div class="col-1 d-flex justify-content-center align-items-center no-gutters" style="background-color: #116bd2; color: white;">
+                  <div class="row text-center mt-1 no-gutters">
+                    <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;">access_time</mat-icon></div>
+                    <div class="col-12"><span class="font-weight-bold">{{ comp.totalwakeup }}</span></div>
+                  </div>
                 </div>
-                <div class="col-10 no-gutters d-flex justify-content-end rounded-circle" style="color:black; margin: -2px -5px 0px 0px; font-size:x-small; width:80%;">
-                  <mat-icon style="font-size:medium;">group</mat-icon>
+                <div class="col-1 d-flex justify-content-center align-items-center no-gutters" style="background-color: #fb0000; color:white">
+                  <div class="row text-center no-gutters">
+                    <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;">local_bar</mat-icon></div>
+                    <div class="col-12"><span class="font-weight-bold">{{ comp.totalalgohol }}</span></div>
+                  </div>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mx-1 no-gutters"><hr style="border: none; border-top: 1px dashed gray; margin:0px 0px 2px 0px"/></div>
-          <div class="row justify-content-center m-1 no-gutters">
+                <div class="col-1 d-flex justify-content-center align-items-center no-gutters" style="background-color:orange;color:white">
+                  <div class="row text-center no-gutters">
+                    <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;;"><span style="font-size:8px; font-family:Verdana; font-weight:bold;">TEMP</span></mat-icon></div>
+                    <div class="col-12"><span class="font-weight-bold">{{ comp.totaltemp }}</span></div>
+                  </div>
+                </div>
+                <div class="col-1 d-flex justify-content-center align-items-center no-gutters" style="background-color: #5c8f4e;color:white">
+                  <div class="row text-center no-gutters">
+                    <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;">directions_car</mat-icon></div>
+                    <div class="col-12"><span class="font-weight-bold">{{ comp.totalstart }}</span></div>
+                  </div>
+                </div>
 
-            <div class="col-3 d-flex justify-content-center align-items-center no-gutters" style="background-color: #116bd2; color: white;">
-              <div class="row text-center mt-1 no-gutters">
-                <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;">access_time</mat-icon></div>
-                <div class="col-12"><span class="font-weight-bold">{{ comp.totalwakeup }}</span></div>
+                <div class="col-8">a</div>
               </div>
-            </div>
 
-            <div class="col-3 d-flex justify-content-center align-items-center no-gutters" style="background-color: #fb0000; color:white">
-              <div class="row text-center no-gutters">
-                <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;">local_bar</mat-icon></div>
-                <div class="col-12"><span class="font-weight-bold">{{ comp.totalalgohol }}</span></div>
-              </div>
-            </div>
 
-            <div class="col-3 d-flex justify-content-center align-items-center no-gutters" style="background-color:orange;color:white">
-              <div class="row text-center no-gutters">
-                <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;;"><span style="font-size:8px; font-family:Verdana; font-weight:bold;">TEMP</span></mat-icon></div>
-                <div class="col-12"><span class="font-weight-bold">{{ comp.totaltemp }}</span></div>
-              </div>
             </div>
-
-            <div class="col-3 d-flex justify-content-center align-items-center no-gutters" style="background-color: #5c8f4e;color:white">
-              <div class="row text-center no-gutters">
-                <div class="col-12"><mat-icon style="font-size:small;padding-top:4px;margin-bottom:-8px;">directions_car</mat-icon></div>
-                <div class="col-12"><span class="font-weight-bold">{{ comp.totalstart }}</span></div>
-              </div>
-            </div>
-
-          </div>
           </div>
 
            <!-- driver data in company-->
           <div class="col-12">
-           
-          <div *ngIf="comp.showDetails" class="row d-flex justify-content-start align-items-center no-gutters mx-2 mt-5 mb-1" >
-            <div class="row d-flex justify-content-center align-items-center  no-gutters" >
-              <!-- <div class="col-1"></div> -->
-              
-              <div class="col-12 d-flex flex-wrap align-items-center justify-content-center no-gutters" style="overflow-x: auto;">
-                <div class="{{isDesktop == 6 ? 'col-1':'col-11'}} ishadow no-gutters m-2" *ngFor="let driver of listdriver">
-                  <div class="row zeroxy no-gutters H1031">
+            <div *ngIf="comp.showDetails" class="row d-flex justify-content-start align-items-center no-gutters mx-2 mt-5 mb-1" >
+              <div class="row d-flex justify-content-center align-items-center  no-gutters" >
+                <div class="col-12 d-flex flex-wrap align-items-center justify-content-center no-gutters" style="overflow-x: auto;">
+                  <div class="{{isDesktop == 6 ? 'col-1':'col-11'}} ishadow no-gutters m-2 " *ngFor="let driver of listdriver">
 
-                    <!-- user image -->
-                    <div class="col-2">
-                      <img class="profileimg " src="../../../assets/images/user-ic.png">
-                    </div>
+                    <div class="row zeroxy no-gutters iframhaft H1010">
 
-                    <!-- user detail -->
-                    <div class="col-10" >
-                            <!-- DRIVER -->
-                            <div class="row zeroxy no-gutters">
-                              <div class="col-12 d-flex justify-content-start align-items-center no-gutters">
-                                <span style="font-weight:500; font-size:x-small; text-transform:uppercase;">{{ driver.drivername }}</span>
-                              </div>
-                            </div>
-                      
-                            <!-- VEHICLE -->
-                            <div class="row zeroxy no-gutters" >
-                              <div class="col-12 no-gutters">
-                                <div class="row align-items-center justify-content-start">
-                                    <div class="col-12">
-                                      <span >{{ driver.vehiclename }}</span>
-                                    </div>
+                      <!-- user image -->
+                      <div class="col-2">
+                        <img class="profileimg " src="../../../assets/images/user-ic.png">
+                      </div>
+
+                      <!-- user detail -->
+                      <div class="col-10" >
+                              <!-- DRIVER -->
+                              <div class="row zeroxy no-gutters">
+                                <div class="col-12 d-flex justify-content-start align-items-center no-gutters">
+                                  <span style="font-weight:500; font-size:x-small; text-transform:uppercase;">{{ driver.drivername }}</span>
                                 </div>
                               </div>
-                            </div>
+                        
+                              <!-- VEHICLE -->
+                              <div class="row zeroxy no-gutters" >
+                                <div class="col-12 no-gutters">
+                                  <div class="row align-items-center justify-content-start">
+                                      <div class="col-12">
+                                        <span >{{ driver.vehiclename }}</span>
+                                      </div>
+                                  </div>
+                                </div>
+                              </div>
+                      </div>
+
                     </div>
 
-                  </div>
+                    <!-- STATAUS ICON -->
+                    <div class="row mx-1 no-gutters"><hr style="border: none; border-top: 1px dashed gray; margin:0px 0px 2px 0px"/></div>
+                    <div class="row justify-content-center m-1 no-gutters">
 
+                      <div class="col-3 d-flex justify-content-center align-items-center no-gutters">
+                        <div class="row text-center mt-1 no-gutters">
+                          <div class="col-12"><mat-icon  [ngClass]="driver.wakeupicon"  style="height: 30px;width: 30px;">access_time</mat-icon></div>
 
-
-                  <!-- STATAUS ICON -->
-                  <div class="row mx-1 no-gutters"><hr style="border: none; border-top: 1px dashed gray; margin:0px 0px 2px 0px"/></div>
-                  <div class="row justify-content-center m-1 no-gutters">
-
-                    <div class="col-3 d-flex justify-content-center align-items-center no-gutters">
-                      <div class="row text-center mt-1 no-gutters">
-                        <div class="col-12"><mat-icon  [ngClass]="driver.wakeupicon"  style="height: 30px;width: 30px;">access_time</mat-icon></div>
-
+                        </div>
                       </div>
-                    </div>
 
-                    <div class="col-3 d-flex justify-content-center align-items-center no-gutters">
-                      <div class="row text-center no-gutters">
-                        <div class="col-12"><mat-icon  [ngClass]="driver.algohalicon"  style="height: 30px;width: 30px;">local_bar</mat-icon></div>
+                      <div class="col-3 d-flex justify-content-center align-items-center no-gutters">
+                        <div class="row text-center no-gutters">
+                          <div class="col-12"><mat-icon  [ngClass]="driver.algohalicon"  style="height: 30px;width: 30px;">local_bar</mat-icon></div>
+                        </div>
                       </div>
-                    </div>
-                    
+                      
 
-                    <div class="col-3 d-flex justify-content-center align-items-center no-gutters">
-                      <div class="row text-center no-gutters">
-                        <div class="col-12"><mat-icon  [ngClass]="driver.tempicon"  style="height: 30px;width: 30px;">
-                          <span style="font-size:8px; font-family:Verdana; font-weight:bold;">TEMP</span>
-                        </mat-icon></div>
+                      <div class="col-3 d-flex justify-content-center align-items-center no-gutters">
+                        <div class="row text-center no-gutters">
+                          <div class="col-12"><mat-icon  [ngClass]="driver.tempicon"  style="height: 30px;width: 30px;">
+                            <span style="font-size:8px; font-family:Verdana; font-weight:bold;">TEMP</span>
+                          </mat-icon></div>
+                        </div>
                       </div>
-                    </div>
 
-                    <div class="col-3 d-flex justify-content-center align-items-center no-gutters">
-                      <div class="row text-center no-gutters">
-                        <div class="col-12"><mat-icon  [ngClass]="driver.starticon"  style="height: 30px;width: 30px;">directions_car</mat-icon></div>
+                      <div class="col-3 d-flex justify-content-center align-items-center no-gutters">
+                        <div class="row text-center no-gutters">
+                          <div class="col-12"><mat-icon  [ngClass]="driver.starticon"  style="height: 30px;width: 30px;">directions_car</mat-icon></div>
+                        </div>
                       </div>
+
                     </div>
 
                   </div>
                 </div>
               </div>
-
-              <!-- <div class="col-1"></div> -->
-            </div>
           </div>
         </div>
 
         </div>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item>Item 1</button>
-          <button mat-menu-item>Item 2</button>
-        </mat-menu>
+     
       </div>
-      <!-- Next Button Container -->
-      <!-- <div class="col-1 d-flex justify-content-end align-items-center no-gutters">
-        <button mat-icon-button class="no-gutters">
-          <mat-icon>keyboard_arrow_right</mat-icon>
-        </button>
-      </div> -->
+    
     </div>
 
 </div>
