--- a/src/app/page/Mobile/drivercheckinpage/drivercheckinpage.component.html
+++ b/src/app/page/Mobile/drivercheckinpage/drivercheckinpage.component.html
@@ -1,6 +1,6 @@
 <!-- https://getbootstrap.com/docs/5.0/utilities/text/ -->
 <!-- background -->
-<div class="col-lg-12 col-12" style = "background-color: #2c56cb; color:#2c56cb; height:32vh; position:absolute;z-index:0;"></div>
+<div class="col-lg-12 col-12" style = "background-color: #2c56cb; color:#2c56cb; height:20vh; position:absolute;z-index:0;"></div>
 
 <!-- forground -->
 <div class="col-lg-12" style="position:absolute; z-index:1;">
@@ -13,15 +13,13 @@
             </div>
             <span class="col-auto fw-bolder mx-1" >06:00</span>
         </div>
-
         <div class="col-lg-6 col-6 d-flex justify-content-end ms-3">
             <span class="fw-lighter">รอเช็คอิน</span>
         </div>
     </div>
 
-
     <!-- driver detail-->
-    <div class="row ishadow mx-2 py-3">
+    <div class="row ishadow mx-3 py-3 mt-3">
         
         <!-- driver vehicle -->
         <div class="col-lg-12 col-12 m-0 p-0 row no-gutters">
